Improved algorithm and better view